--- a/NewYear/index.html
+++ b/NewYear/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link rel="icon" href="./src/assets/cropped-logo-1-32x32.png" sizes="32x32"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ИСТ поздравляет с Новым Годом!</title>
   </head>
