--- a/NewYear/index.html
+++ b/NewYear/index.html
@@ -8,6 +8,20 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <style type="text/css">
+
+      body, a:hover {cursor: url("https://www.expertplus.ru/UserFiles/Image/content/new_year/12.cur"), url("https://www.expertplus.ru/UserFiles/Image/content/new_year/12.png"), auto !important;}
+
+  </style>
+  <script src="https://www.expertplus.ru/UserFiles/Image/content/new_year/11.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
+  <script src="https://www.expertplus.ru/UserFiles/Image/content/new_year/13.js"></script>
+  <script>
+    var SNOW_Picture = "https://www.expertplus.ru/UserFiles/Image/content/new_year/08.png";
+    var SNOW_Width = "55px";
+    var SNOW_Height = "55px";
+    var SNOW_no = 99;
+</script>
+<script src="https://www.expertplus.ru/UserFiles/Image/content/new_year/08.js"></script>
   </body>
 </html>
