--- a/NewYear/index.html
+++ b/NewYear/index.html
@@ -18,7 +18,7 @@
   <script src="https://www.expertplus.ru/UserFiles/Image/content/new_year/13.js"></script>
   <script>
     var SNOW_Picture = "https://www.expertplus.ru/UserFiles/Image/content/new_year/08.png";
-    var SNOW_Width = "55px";
+    var SNOW_Width = "auto";
     var SNOW_Height = "55px";
     var SNOW_no = 99;
 </script>
